<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#006699"
    tools:context="gertnergroup.calculator.MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:id="@+id/B9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="96dp"
        android:width="90dp"
        android:height="90dp"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:id="@+id/B8"
        android:width="90dp"
        android:height="90dp"
        android:layout_alignTop="@+id/B9"
        android:layout_toEndOf="@+id/B9"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:id="@+id/B7"
        android:width="90dp"
        android:height="90dp"
        android:layout_alignTop="@+id/B8"
        android:layout_toEndOf="@+id/B8"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:id="@+id/B5"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/B9"
        android:layout_toStartOf="@+id/B7"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:id="@+id/B6"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/B9"
        android:layout_alignParentStart="true"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:id="@+id/B4"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/B8"
        android:layout_toEndOf="@+id/B5"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:id="@+id/B3"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/B5"
        android:layout_alignParentStart="true"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:id="@+id/B1"
        android:width="90dp"
        android:height="90dp"
        android:layout_alignTop="@+id/B2"
        android:layout_toEndOf="@+id/B2"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:id="@+id/B2"
        android:width="90dp"
        android:height="90dp"
        android:layout_alignTop="@+id/B3"
        android:layout_toEndOf="@+id/B3"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/Plus"
        android:width="90dp"
        android:height="90dp"
        android:layout_alignTop="@+id/B7"
        android:layout_toEndOf="@+id/B7"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:id="@+id/sub"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/Plus"
        android:layout_toRightOf="@+id/B7"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mutiply"
        android:id="@+id/times"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/sub"
        android:layout_toRightOf="@+id/B7"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/over"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/times"
        android:layout_alignStart="@+id/times"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:id="@+id/B0"
        android:width="90dp"
        android:height="90dp"
        android:layout_below="@+id/B3"
        android:layout_alignParentStart="true"
        android:textSize="70sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:id="@+id/button15"
        android:width="180dp"
        android:height="90dp"
        android:layout_below="@+id/B1"
        android:layout_toStartOf="@+id/over"
        android:textSize="70sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/num"
        android:textSize="40sp"
        android:width="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/Plus"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/Clear"
        android:layout_above="@+id/B8"
        android:layout_alignEnd="@+id/num" />

</RelativeLayout>
